Change url image file upload default

--- a/projects/ng-bootstrap-fileupload-angular/package.json
+++ b/projects/ng-bootstrap-fileupload-angular/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ng-bootstrap-fileupload-angular",
-  "version": "0.0.1",
-  "description": "Angular File Upload",
+  "version": "0.0.2",
+  "description": "Angular Bootstrap File Upload",
   "keywords": [
     "Angular",
     "file upload",
